@@ -1,0 +1,7 @@
+<?php /* #?ini charset="utf-8"?
+[Leftmenu_setup]
+Links[xmlexport]=xmlexport/menu
+LinkNames[xmlexport]=XML Export
+
+*/
+?>
