@@ -2,6 +2,7 @@ Changes from ezxmlexport-1.0.0 to ezxmlexport-1.1
 
 Bugfixes:
 - Fixed bug #16107 : eZXMLExport doesn't play well with 'move selected nodes' option
+- Fixed bug #16359: XML Export menu entry not showed at new admin interface
 
 Changes from ezxmlexport1.0-alpha1 to ezxmlexport1.0-alpha2
 
